//source $JDE_DIR/Framework/scripts/common.sh;toBashDir $JDE_DIR JDE_BASH;appSource=$JDE_BASH/Public/jde/appServer/proto;commonDir=$JDE_BASH/Public/src/web/proto
//cd $appSource;mklink FromServer.proto $commonDir;protoc -I. --experimental_editions --cpp_out . AppFromServer.proto
//cd $JDE_BASH/AppServer/source;moveToDir types;moveToDir proto;mv $appSource/AppFromServer.pb.cc .;mklink AppFromServer.pb.h $appSource;mklink FromServer.pb.h $commonDir

syntax = "proto3";
package Jde.ApplicationServer.Web.FromServer;
import "FromServer.proto";

enum EResults{
	Authentication=0;
}
enum ELogLevel{
	Trace = 0;
	Debug = 1;
	Information = 2;
	Warning = 3;
	Error = 4;
	Critical = 5;
	None = 6;
}

message MessageValue{
	EResults type=1;
	oneof Value
	{
		string string_value = 2;
		int32 int_value = 3;
	}
}

message StringValue{
	uint32 request_id=1;
	string value=2;
}

message Application{
	uint32 id=1;
	string name=2;
	ELogLevel db_level=3;
	ELogLevel file_level=4;
}

message Applications{
	repeated Application values=1;
}

message Status{
	uint32 application_id=1;
	uint32 instance_id=2;
	string host_name=3;
	uint32 start_time=4;
	uint64 memory=5;
	uint32 log_count=6;
	double cpu=7;
	ELogLevel db_log_level=8;
	ELogLevel file_log_level=9;
	repeated string values=10;
}

message Statuses{
	repeated Status values=1;
}

message TraceMessage{
	uint64 id=1;
	uint64 instance_id=2;
	uint64 time=3;
	ELogLevel level=4;
	uint32 message_id=5;
	uint32 file_id=6;
	uint32 function_id=7;
	uint32 line_number=8;
	uint32 user_id=9;
	uint64 thread_id=10;
	repeated string variables=11;
}

message Traces{
	uint32 application_id=1;
	repeated TraceMessage values=2;
}

message ApplicationString{
	uint32 string_request_type=1;
	uint32 id=2;
	string value=3;
}

message ApplicationStrings{
	uint32 request_id=1;
	uint32 application_id=2;
	repeated ApplicationString values=3;
}

message Custom{
	uint32 request_id=1;
	bytes message=2;
}

message GraphQL{
	uint32 request_id=1;
	string json=2;
}

message MessageUnion{
	oneof value{
		Traces traces=1;
		Statuses statuses=2;
		Jde.Web.FromServer.Acknowledgement acknowledgement=3;
		ApplicationStrings strings=4;
		Applications applications=5;
		Jde.Web.FromServer.Exception exception=6;
		Custom custom=7;
		Jde.Web.FromServer.Complete complete=8;
		MessageValue message=9;
		StringValue string_value=10;
		GraphQL graph_ql=11;
	}
}

message Transmission{
	repeated MessageUnion messages=1;
}